tests/errors/list_addition_violations.sad
# Attempt to add a non-primitive function value to list
method foo() {}
items = [1, 2] + foo
